--- a/index.html
+++ b/index.html
@@ -171,16 +171,76 @@
                                 </div>
                                 <ul class="task-list" id="to-do">
                                     <li class="task">
-                                        Analysis
+                                        <p> Add padding to the button</p>
+                                        <div>
+                                            <button
+                                                class="btn rate-btn"
+                                                type="button"
+                                                data-bs-toggle="dropdown"
+                                                aria-expanded="false">
+                                                <i
+                                                    class="fa-solid fa-flag text-secondary flag-color"></i>
+                                            </button>
+                                            <ul
+                                                class="dropdown-menu priority-btn">
+                                                <li class data-id="urgent">
+                                                    <i
+                                                        class="fa-solid fa-flag text-danger"></i>Urgent</li>
+                                                <li class data-id="high"> <i
+                                                        class="fa-solid fa-flag text-warning"></i>High</li>
+                                                <li class data-id="normal"> <i
+                                                        class="fa-solid fa-flag text-primary"></i>Normal</li>
+                                                <li class data-id="low"> <i
+                                                        class="fa-solid fa-flag text-secondary"></i>Low</li>
+                                            </ul>
+                                        </div>
+
                                     </li>
                                     <li class="task">
-                                        Coding
+                                        <p>Coding the function</p>
+                                        <div>
+                                            <button
+                                                class="btn rate-btn"
+                                                type="button"
+                                                data-bs-toggle="dropdown"
+                                                aria-expanded="false">
+                                                <i
+                                                    class="fa-solid fa-flag text-secondary flag-color"></i>
+                                            </button>
+                                            <ul
+                                                class="dropdown-menu priority-btn">
+                                                <li class data-id="urgent">
+                                                    <i
+                                                        class="fa-solid fa-flag text-danger"></i>Urgent</li>
+                                                <li class data-id="high"> <i
+                                                        class="fa-solid fa-flag text-warning"></i>High</li>
+                                                <li class data-id="normal"> <i
+                                                        class="fa-solid fa-flag text-primary"></i>Normal</li>
+                                                <li class data-id="low"> <i
+                                                        class="fa-solid fa-flag text-secondary"></i>Low</li>
+                                            </ul>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Card Sorting
+                                        <p>Card Sorting is not working, fix
+                                            it!</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Measure
+                                        <p>check the validations</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                 </ul>
                             </li>
@@ -191,13 +251,36 @@
                                 </div>
                                 <ul class="task-list" id="doing">
                                     <li class="task">
-                                        Hypothesis
+                                        <p>Coding the function</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        User Testing
+                                        <p>check the validations</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Prototype
+                                        <p> change the button color and
+                                            choose
+                                            from pallet</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                 </ul>
                             </li>
@@ -208,10 +291,24 @@
                                 </div>
                                 <ul class="task-list" id="ohHold">
                                     <li class="task">
-                                        Ideation
+                                        <p>check the validations</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Sketches
+                                        <p>Coding the function</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                 </ul>
                             </li>
@@ -222,10 +319,26 @@
                                 </div>
                                 <ul class="task-list" id="done">
                                     <li class="task">
-                                        Interviews
+                                        <p> change the button color and
+                                            choose
+                                            from pallet</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Research
+                                        <p>Coding the function</p>
+                                        <div>
+                                            <a href="#"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <br />
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
 
                                 </ul>
@@ -243,16 +356,46 @@
                                 </div>
                                 <ul class="task-list" id="to-do">
                                     <li class="task">
-                                        Analysis
+                                        <p> Add padding to the button</p>
+
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Coding
+                                        <p>Coding the function</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Card Sorting
+                                        <p>Card Sorting is not working, fix
+                                            it!</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Measure
+                                        <p>check the validations</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                 </ul>
                             </li>
@@ -263,13 +406,36 @@
                                 </div>
                                 <ul class="task-list" id="doing">
                                     <li class="task">
-                                        Hypothesis
+                                        <p>Coding the function</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        User Testing
+                                        <p>check the validations</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Prototype
+                                        <p> change the button color and
+                                            choose
+                                            from pallet</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                 </ul>
                             </li>
@@ -280,10 +446,24 @@
                                 </div>
                                 <ul class="task-list" id="ohHold">
                                     <li class="task">
-                                        Ideation
+                                        <p>check the validations</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Sketches
+                                        <p>Coding the function</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                 </ul>
                             </li>
@@ -294,10 +474,26 @@
                                 </div>
                                 <ul class="task-list" id="done">
                                     <li class="task">
-                                        Interviews
+                                        <p> change the button color and
+                                            choose
+                                            from pallet</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
                                     <li class="task">
-                                        Research
+                                        <p>Coding the function</p>
+                                        <div>
+                                            <a href="#"
+                                                class="task-priority"><i
+                                                    class="fa-brands fa-font-awesome"></i></a>
+                                            <a class="detail"><i
+                                                    class="fa-solid fa-pen-to-square"></i></a>
+                                        </div>
                                     </li>
 
                                 </ul>
@@ -305,6 +501,7 @@
 
                         </ul>
                     </main>
+
                 </div>
 
             </div>
